# bitbank-sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/bitbank/: __init__.py  _http.py  client.py  exceptions.py  websocket.py
src/bitbank/endpoints/: __init__.py  account.py  auth.py  forecasts.py  trading_bot.py
src/bitbank/models/: __init__.py  account.py  accuracy.py  auth.py  coins.py  forecasts.py  signals.py  trading.py
tests/: conftest.py
tests/integration/: test_public.py
tests/unit/: test_client.py
