[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bitbank-sdk"
version = "0.1.0"
description = "Python SDK for the bitbank.nz cryptocurrency trading API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Lee Penkman" }]
keywords = ["bitbank", "crypto", "trading", "api", "sdk", "forecast"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "websockets>=12.0",
    "eval_type_backport>=0.2; python_version < '3.10'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://bitbank.nz"
Repository = "https://github.com/lee101/bitbank-sdk-python"
Issues = "https://github.com/lee101/bitbank-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bitbank"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: live API tests (require BITBANK_API_KEY)"]

[tool.ruff]
target-version = "py39"
line-length = 120
